add time window for /rewards/by-address
